# Omniverlay

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: errors.rs  event.rs  extensions.rs  lib.rs
core/src/extensions/: config.rs  data.rs  mod.rs
core/src/utils/: fs.rs
extensions/performance/: Cargo.toml
extensions/performance/src/: lib.rs
ui/: .gitignore  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
ui/src-tauri/src/commands/: extensions.rs  mod.rs  native.rs
ui/src-tauri/src/utils/: tray.rs
ui/src/lib/components/studio/: ExtensionConfigModal.svelte  PageContainer.svelte  Sidebar.svelte
ui/src/lib/extensions/: ExtensionContainer.svelte  config.ts  loader.ts  types.ts
ui/src/lib/extensions/components/: Performance.svelte
ui/src/lib/utils/: popper.ts
ui/src/routes/: +page.svelte
ui/src/routes/overlay/: +page.svelte
ui/src/routes/studio/: +page.svelte
ui/src/routes/studio/contribute/: +page.svelte
ui/src/routes/studio/extension/: +page.svelte
ui/src/routes/studio/extensions/: +page.svelte
ui/src/routes/studio/layout/: +page.svelte
ui/src/routes/studio/settings/: +page.svelte
ui/static/assets/js/: tooltip.js
ui/static/assets/styles/: app.css  tooltip.css
