[package]
name = "ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }

# Omniverlay
omniverlay_core = { path = "../../core" }
performance = { path = "../../extensions/performance" }
log = "0.4.22"
serde_json = "1.0.122"
once_cell = "1.19.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }
win32-foundation = "0.1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
